...
            "state" : "translated",
            "value" : "Wybierz ikonę"
          }
        }
      }
    },
    "Select the working profile" : {
      "comment" : "A title displayed above a list of profiles.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
...
    "Who is working today" : {
      "extractionState" : "manual",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Seleccione el perfil de trabajo"
          }
        }
      }
    },
    "You've reached the maximum of 3 profiles on the free plan. Upgrade to Premium to create unlimited profiles!" : {
      "comment" : "A description of the feature that is limited in the free plan.",
...
